# cq-tools

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
checks/: _check_data_read_env.py  check_data_read_env.py  check_data_write_env.py  check_display_function.py  check_dummy.py  check_exec_function.py  tests.py  utils.py
cqtools/checks/: check_adaptive_query.py  check_adf_executes_ntb.py  check_adf_executes_pipeline.py  check_cache_unpersist.py  check_data_write_env.py  check_display_function.py  check_distinct_count.py  check_hardcoded_env.py  check_magic_commands.py  config.py  utils.py
py_scripts/: example.py  example10.py  example11.py  example2.py  example3.py  example4.py  example5.py  example6.py  example9.py  real_example.py
tests/: main.py  pyproject.toml  test_basic.py  test_functional.py
tests/test_files/: example2.py  example8.py  example9.py
tests/test_files/src/: L4_pipeline_example.json  example.py  example10.py  example12.py  example7.py  example_magic_commented.py  example_write_multiline.py  for_each_example.json  job_example_notebook1.json  job_example_notebook2_inforeach.json  job_example_notebook2_nopipeline.json  job_ntb_example_no_pipeline.py
