[tool.poetry]
name = "cqtools"
version = "0.0.1"
description = "Best practices checks for codes writen within/for big data platforms (tech stack of DBX, ADF and Spark)"
authors = ["Anastasia Lebedeva <anastasia.lebedeva@datasentics.com>"]
repository = "https://github.com/DataSentics/cq-tools"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
